# camlog

./: .gitignore  CMakeLists.txt  Dependencies.cmake  Dockerfile  README.md  build.sh  check.sh  podman_build.sh  run_libertine.sh  run_on_ubports.sh
src/: camera.cpp  image.cpp  main.cpp  save.cpp
toolchains/: linux-aarch64.cmake  linux-x86.cmake
